--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,3 +39,9 @@ jobs:
         with:
           cdk_subcommand: 'diff'
           actions_comment: true
+      - name: Comment on PR
+        uses: unsplash/comment-on-pr@v1.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          msg: "CDK deployment complete. 🚀"
