feat: pass github token to action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Run cdk diff
         uses: youyo/aws-cdk-github-actions@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           cdk_subcommand: 'diff'
           actions_comment: true
