feat: add condition for generating diff

--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Run cdk diff
         uses: youyo/aws-cdk-github-actions@v2
+        if: github.base_ref == 'main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
