--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,10 @@ jobs:
 
       - name: Run cdk deploy
         uses: youyo/aws-cdk-github-actions@v2
+        env:
+          AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           cdk_subcommand: 'deploy'
           cdk_args: '--require-approval never'
