--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -40,6 +40,8 @@ jobs:
         uses: youyo/aws-cdk-github-actions@v2
         if: github.base_ref == 'main'
         env:
+          AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           cdk_subcommand: 'diff'
