--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "ts-jest": "^29.1.2",
     "aws-cdk": "2.131.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "env-var": "^7.4.1"
   },
   "dependencies": {
+    "aws-cdk-github-oidc": "^2.4.1",
     "aws-cdk-lib": "2.131.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
