--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,9 @@
 name: Deploy
 
-on: [pull_request]
+on: 
+  push:
+    branches:
+      - main
 
 permissions:
   id-token: write # This is required for requesting the JWT
