--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cdk": "cdk",
     "prettier-format": "prettier --config .prettierrc 'lib/**/*.ts' --write",
     "prettier-check": "prettier --config .prettierrc 'lib/**/*.ts' --check",
-    "lint": "eslint lib --ext .ts --fix"
+    "lint": "eslint lib --ext .ts",
+    "lint:fix": "eslint lib --ext .ts --fix"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
