--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -2,7 +2,7 @@ name: Verify Pull-Request
 on: [pull_request]
 
 jobs:
-  verify:
+  VerifyPR:
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
