--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -1,18 +1,22 @@
 name: Verify Pull-Request
-on: [pull_request]
+on:
+  pull_request_target:
+    types:
+      - opened
+      - edited
+      - synchronize
 
 permissions:
-  pull-requests: write
+  pull-requests: read
 
 jobs:
-  VerifyPR:
+  main:
+    name: Validate PR title
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          wip: true
       - name: Compile
         run: yarn build
       - name: Lint
