--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -1,4 +1,4 @@
-name: Verify Pull-Request
+name: Verify Pull-Request Title
 on:
   pull_request_target:
     types:
@@ -10,16 +10,10 @@ permissions:
   pull-requests: read
 
 jobs:
-  main:
+  verify_pr_title:
     name: Validate PR title
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Compile
-        run: yarn build
-      - name: Lint
-        run: yarn lint
-      - name: Test
-        run: yarn test
