--- a/.github/workflows/verify-pr.yml
+++ b/.github/workflows/verify-pr.yml
@@ -1,10 +1,7 @@
 name: Verify Pull-Request Title
 on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - synchronize
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 permissions:
   pull-requests: read
