--- a/.github/workflows/verify-pr-title.yml
+++ b/.github/workflows/verify-pr-title.yml
@@ -16,4 +16,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - if: github.base_ref == 'main'
+        name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Quality Assurance
         uses: ./.github/workflows/quality-assurance.yaml
