--- a/.github/workflows/on-pr-updated.yml
+++ b/.github/workflows/on-pr-updated.yml
@@ -54,6 +54,9 @@ jobs:
 
     name: Generate CDK Diff
     runs-on: ubuntu-latest
+    needs:
+      - verify_pr_title
+      - quality_assurance
     steps:
       - name: Checkout
         uses: actions/checkout@v4
