--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -2,6 +2,8 @@ name: Generate CDK Diff
 on:
   workflow_run:
     workflows: ['Verify Pull-Request Changes']
+    types:
+      - completed
 
 permissions:
   id-token: write # This is required for requesting the JWT
