Revert "change workflow dependency to job"
This reverts commit f6ca29406d3a3a1538d59d81e582459c18356918.

--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -1,7 +1,7 @@
 name: Generate CDK Diff
 on:
   workflow_run:
-    workflows: [quality_assurance]
+    workflows: ['Verify Pull-Request Changes']
     types:
       - completed
 
