chore: set up QA for repository (#3)

--- a/.github/workflows/cdk-deploy.yaml
+++ b/.github/workflows/cdk-deploy.yaml
@@ -1,6 +1,9 @@
-name: Diff
+name: Deploy
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -8,23 +11,16 @@ permissions:
   pull-requests: write # This is required for creating a pull request
 
 jobs:
-  Diff:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Merge main
-        run: |
-          git fetch origin main
-          git merge origin/main
 
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
@@ -36,13 +32,13 @@ jobs:
           role-session-name: github-action
           aws-region: ${{ vars.AWS_REGION }}
 
-      - name: Run cdk diff
+      - name: Run cdk deploy
         uses: youyo/aws-cdk-github-actions@v2
-        if: github.base_ref == 'main'
         env:
           AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
           AWS_REGION: ${{ vars.AWS_REGION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          cdk_subcommand: 'diff'
+          cdk_subcommand: 'deploy'
+          cdk_args: '--require-approval never'
           actions_comment: true
