--- a/package.json
+++ b/package.json
@@ -8,17 +8,33 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "eslint lib --ext .ts",
+    "lint:fix": "eslint lib --ext .ts --fix",
+    "lint-staged": "lint-staged",
+    "prepare": "husky",
+    "prettier-format": "prettier --config .prettierrc 'lib/**/*.ts' --write",
+    "prettier-check": "prettier --config .prettierrc 'lib/**/*.ts' --check"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.11.19",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "aws-cdk": "2.131.0",
+    "env-var": "^7.4.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-solid": "^0.13.1",
+    "eslint-plugin-unused-imports": "^3.1.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.3.3",
-    "env-var": "^7.4.1"
+    "typescript": "~5.3.3"
   },
   "dependencies": {
     "aws-cdk-github-oidc": "^2.4.1",
