--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -1,6 +1,7 @@
 name: Generate CDK Diff
 on:
   workflow_run:
+    # TODO - no using the right reference
     workflows: ['Verify Pull-Request Changes']
     types:
       - completed
@@ -18,6 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.workflow_run.head_branch }}
           fetch-depth: 0
 
       - name: Setup Node.js
