--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -1,6 +1,7 @@
 name: Generate CDK Diff
 on:
   workflow_run:
+    # TODO - no using the right reference
     workflows: ['Verify Pull-Request Changes']
     types:
       - completed
@@ -13,11 +14,20 @@ permissions:
 jobs:
   generate_diff:
     name: Generate CDK Diff
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     steps:
+      - name: Log
+        run: |
+          echo {{ github.event.workflow_run.pull_request.head.sha }}
+          echo {{ github.event.workflow_run}}
+          echo {{ github.event.workflow_run.pull_request }}
+          echo {{ github.event.workflow_run.pull_request.head }}
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.workflow_run.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Setup Node.js
