chore: fix reference to variables

--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -19,10 +19,10 @@ jobs:
     steps:
       - name: Log
         run: |
-          echo {{ github.event.workflow_run.pull_request.head.sha }}
-          echo {{ github.event.workflow_run}}
-          echo {{ github.event.workflow_run.pull_request }}
-          echo {{ github.event.workflow_run.pull_request.head }}
+          echo ${{ github.event.workflow_run.pull_request.head.sha }}
+          echo ${{ github.event.workflow_run}}
+          echo ${{ github.event.workflow_run.pull_request }}
+          echo ${{ github.event.workflow_run.pull_request.head }}
 
       - name: Checkout
         uses: actions/checkout@v4
