--- a/.github/workflows/on-pr-updated.yml
+++ b/.github/workflows/on-pr-updated.yml
@@ -16,6 +16,7 @@ jobs:
   quality_assurance:
     name: Quality Assurance
     runs-on: ubuntu-latest
+    needs: verify_pr_title
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -47,6 +48,7 @@ jobs:
   generate_diff:
     name: Generate CDK Diff
     runs-on: ubuntu-latest
+    needs: quality_assurance
     if: ${{ github.event.pull_request.base.ref }} == 'main'
     steps:
       - name: Checkout
@@ -54,6 +56,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: ./.github/workflows/cdk-diff
+      - uses: ./.github/workflows/cdk-diff.yaml
         with:
           ref: ${{ github.event.pull_request.head.sha }}
