--- a/.github/workflows/on-pr-updated.yaml
+++ b/.github/workflows/on-pr-updated.yaml
@@ -46,6 +46,8 @@ jobs:
         run: yarn test
 
   generate_diff:
+    needs: quality_assurance
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.base.ref == "main" }}
     permissions:
       contents: read
       id-token: write # This is required for requesting the JWT
