--- a/.github/workflows/on-pr-updated.yaml
+++ b/.github/workflows/on-pr-updated.yaml
@@ -52,6 +52,10 @@ jobs:
     steps:
       - name: Log
         run: |
+          echo "${{ toJson(github) }} && echo ${{ github.head_ref }}"
+
+      - name: Log
+        run: |
           echo "${{ toJson(github.event.pull_request) }}"
       - name: Log
         run: |
@@ -69,4 +73,4 @@ jobs:
       pull-requests: write # This is required for creating a pull request
     uses: ./.github/workflows/cdk-diff.yaml
     with:
-      ref: ${{ github.event.pull_request.base.sha }}
+      ref: ${{ github.head_ref }}
