--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -48,6 +48,11 @@ jobs:
           AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
           AWS_REGION: ${{ vars.AWS_REGION }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+          SLACK_CHANNEL_CONFIGURATION_NAME: ${{ vars.SLACK_CHANNEL_CONFIGURATION_NAME }}
+          SLACK_CHANNEL_ID: ${{ vars.SLACK_CHANNEL_ID }}
+          SLACK_WORKSPACE_ID: ${{ vars.SLACK_WORKSPACE_ID }}
+
         with:
           cdk_subcommand: 'diff'
           actions_comment: true
