--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -6,6 +6,12 @@ on:
         type: string
         required: true
 
+  workflow_dispatch:
+    inputs:
+      ref:
+        type: string
+        required: true
+
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
