--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "chatbot-config",
   "version": "0.1.0",
-  "bin": {
-    "chatbot-config": "bin/chatbot-config.js"
-  },
+  "bin": "bin/chatbot-config.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -14,7 +12,8 @@
     "lint-staged": "lint-staged",
     "prepare": "husky",
     "prettier-format": "prettier --config .prettierrc 'lib/**/*.ts' --write",
-    "prettier-check": "prettier --config .prettierrc 'lib/**/*.ts' --check"
+    "prettier-check": "prettier --config .prettierrc 'lib/**/*.ts' --check",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -32,6 +31,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "semantic-release": "^23.0.2",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
@@ -41,5 +41,10 @@
     "aws-cdk-lib": "2.131.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "engines": {
+    "node": ">=20.8.1",
+    "yarn": ">=2.4.0"
+  },
+  "packageManager": "yarn@4.1.1"
 }
