--- a/.github/workflows/cdk-deploy.yaml
+++ b/.github/workflows/cdk-deploy.yaml
@@ -1,10 +1,10 @@
 name: Deploy
 
 on:
-  # TODO On Version created
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ['release']
+    types:
+      - completed
 
   workflow_dispatch:
 
@@ -16,6 +16,7 @@ permissions:
 jobs:
   Deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout
         if: ${{ github.event_name }} == 'push'
