--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,15 +1,18 @@
 name: Release
 on:
   # https://semantic-release.gitbook.io/semantic-release/support/faq#can-i-use-semantic-release-to-publish-non-javascript-packages
-#   workflow_run:
-#     workflows: ['CI']
-#     types:
-#       - completed
-#     branches:
-#       - main
+  workflow_run:
+    workflows: ['CI']
+    types:
+      - completed
+    branches:
+      - main
 
 permissions:
-  contents: read
+  contents: write # to be able to publish a GitHub release
+  issues: write # to be able to comment on released issues
+  pull-requests: write # to be able to comment on released pull requests
+  id-token: write # to enable use of OIDC for npm provenance
 
 jobs:
   release:
