--- a/.releaserc
+++ b/.releaserc
@@ -1,4 +1,14 @@
 {
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ]
+  ],
   "branches": [
     "main"
   ]
