--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "env-var": "^7.4.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-cyclomatic-complexity": "^2.0.11",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-solid": "^0.13.1",
+    "eslint-plugin-sonarjs": "^0.24.0",
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
