--- a/.eslintrc
+++ b/.eslintrc
@@ -22,5 +22,9 @@
     "unused-imports/no-unused-imports": "error",
     "sonarjs/cognitive-complexity": ["error", 5],
     "complexity": ["error", { "max": 7 }],
+    "max-lines-per-function": [
+      "error",
+      { "max": 20, "skipBlankLines": true, "skipComments": true },
+    ],
   },
 }
