Install esbuild for docker bundling

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "aws-cdk": "2.131.0",
     "env-var": "^7.4.1",
+    "esbuild": "^0.20.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cyclomatic-complexity": "^2.0.11",
