--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -51,7 +51,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Run cdk diff
-        uses: Flojolomo/aws-cdk-github-actions
+        uses: Flojolomo/aws-cdk-github-actions@v0.0.1
         env:
           AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
           AWS_REGION: ${{ vars.AWS_REGION }}
