--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-lambda-powertools/batch": "^2.0.3",
     "@aws-lambda-powertools/commons": "^2.0.2",
     "@aws-lambda-powertools/logger": "^2.0.2",
     "@aws-lambda-powertools/metrics": "^2.0.2",
