--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4",
     "@types/node": "20.11.19",
+    "@types/uuid": "^9",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "aws-cdk": "2.131.0",
@@ -47,12 +48,14 @@
     "@aws-lambda-powertools/logger": "^2.0.2",
     "@aws-lambda-powertools/metrics": "^2.0.2",
     "@aws-lambda-powertools/tracer": "^2.0.2",
+    "@aws-sdk/client-dynamodb": "^3.535.0",
     "aws-cdk-github-oidc": "^2.4.1",
     "aws-cdk-lib": "2.131.0",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "js-yaml": "^4.1.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=20.8.1",
