--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@aws-lambda-powertools/logger": "^2.0.2",
     "@aws-lambda-powertools/metrics": "^2.0.2",
     "@aws-lambda-powertools/tracer": "^2.0.2",
+    "@aws-sdk/client-cloudwatch-events": "^3.535.0",
     "@aws-sdk/client-dynamodb": "^3.535.0",
     "aws-cdk-github-oidc": "^2.4.1",
     "aws-cdk-lib": "2.131.0",
