--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@aws-sdk/client-cloudwatch-events": "^3.535.0",
     "@aws-sdk/client-dynamodb": "^3.535.0",
     "@aws-sdk/client-eventbridge": "^3.535.0",
+    "@aws-sdk/client-sns": "^3.535.0",
+    "@aws-sdk/client-sqs": "^3.535.0",
     "aws-cdk-github-oidc": "^2.4.1",
     "aws-cdk-lib": "2.131.0",
     "aws-lambda": "^1.0.7",
