declare env globaly in action

--- a/.github/workflows/cdk-diff.yaml
+++ b/.github/workflows/cdk-diff.yaml
@@ -17,6 +17,18 @@ permissions:
   contents: read # This is required for actions/checkout
   pull-requests: write # This is required for creating a pull request
 
+env:
+  AWS_ACCOUNT_ID: ${{ vars.AWS_ACCOUNT_ID }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  DATADOG_EXTERNAL_ID: ${{ secrets.DATADOG_EXTERNAL_ID }}
+  DATADOG_SITE: ${{ secrets.DATADOG_SITE }}
+
+  SLACK_CHANNEL_CONFIGURATION_NAME: ${{ secrets.SLACK_CHANNEL_CONFIGURATION_NAME }}
+  SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
+  SLACK_WORKSPACE_ID: ${{ secrets.SLACK_WORKSPACE_ID }}
+
 jobs:
   list_stacks:
     name: List Stacks
